test-cases added